fix: header utility bar not hidden on mobile

--- a/src/components/header-utility-bar/_style.scss
+++ b/src/components/header-utility-bar/_style.scss
@@ -98,7 +98,7 @@
 
 @media screen and (max-width: $wsu-breakpoint--horizontal-nav ) {
 
-    .wsu-has--mobile-nav .wsu-header-utility-bar {
+    .wsu-header-utility-bar {
         display: none;
     }
 
